--- a/layouts/partials/home-hero.html
+++ b/layouts/partials/home-hero.html
@@ -1,7 +1,7 @@
 <section class="hero bg-hero">
       <div class="container mt-lg-5 mb-3">
         <div class="row align-items-center">
-          <div class="col-lg-10">
+          <div class="col-lg-8">
             <h1 class="hero-heading mb-1 text-bold shadow-black">{{ .Site.Params.hero.title }}</h1>
             <div class="row">
               <div class="col-lg-10 mt-2">
@@ -10,8 +10,8 @@
             </div>
             <div class="row">
               <div class="col">
-                <a href="/services" class="btn btn-warning rounded-pill text-uppercase mr-2">Learn how</a>
-                <a href="/contact" class="btn btn-light rounded-pill text-uppercase">Get in contact</a>
+                <a href="/services" class="btn btn-warning text-uppercase me-lg-3">Learn how</a>
+                <a href="/contact" class="btn btn-outline-primary text-uppercase">Get in contact</a>
                 </div>
             </div>
           </div>
