--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header">
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container">
-    <a href="/" class="navbar-brand"><img src="/img/logo/logo_text_right.svg" alt="" class="img-fluid"></a>
+    <a href="/" class="navbar-brand"><img src="/img/logo/skyworkz_small.svg" alt="" class="img-fluid"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon">
         <i class="fa fa-bars fa-2x text-muted"></i>
@@ -17,7 +17,7 @@
                 </li>
                 {{ end }}
       </ul>
-      <a href="/contact" class="btn btn-outline-primary navbar-btn ml-0 ml-lg-3 rounded-pill text-uppercase">Contact</a>
+      <a href="/contact" class="btn btn-primary text-white navbar-btn ms-lg-3 text-uppercase">Contact</a>
     </div>
   </div>
 </nav>
