--- a/layouts/partials/home-about.html
+++ b/layouts/partials/home-about.html
@@ -1,6 +1,6 @@
 
     <section class="py-lg-5 diagonal-box bg-muted">
-      <div class="container text-center text-lg-left mt-3 content">
+      <div class="container text-lg-left mt-3 content">
 
         <div class="row">
           <div class="col-lg-12">
@@ -22,7 +22,7 @@
                 <p class="lead divider-subtitle mt-2 mb-3 text-muted">Next to <a href="/services/consultancy">cloud consulting</a> and our <a href="/services/kickstart">cloud kickstart</a>, we help companies <a href="/services/scan">save costs</a>, we organize various <a href="/workshops">workshops</a> and we provide <a href="/services/training">cloud training</a>.</p>
               </div>
             </div>
-            <a href="/team" class="btn btn-primary rounded-pill">Get to know us</a>
+            <a href="/team" class="btn btn-primary">Get to know us</a>
           </div>
         </div>
  
