--- a/layouts/partials/home-services.html
+++ b/layouts/partials/home-services.html
@@ -39,7 +39,7 @@
             </div>
           </div>
           <div class="text-center">
-            <a class="btn btn-primary rounded-pill" href="/services">Read more about our services</a>
+            <a class="btn btn-primary" href="/services">Read more about our services</a>
           </div>
         </div>
       </div>
