--- a/layouts/partials/home-hero.html
+++ b/layouts/partials/home-hero.html
@@ -10,8 +10,8 @@
             </div>
             <div class="row">
               <div class="col">
-                <a href="/services" class="btn btn-warning text-uppercase me-lg-3">Learn how</a>
-                <a href="/contact" class="btn btn-outline-primary text-uppercase">Get in contact</a>
+                <a href="/services" class="btn btn-warning btn-shadow text-uppercase me-lg-3">Learn how</a>
+                <a href="/contact" class="btn btn-outline-primary btn-shadow text-uppercase">Get in contact</a>
                 </div>
             </div>
           </div>
