--- a/layouts/partials/get-started.html
+++ b/layouts/partials/get-started.html
@@ -9,7 +9,7 @@
         </div>
         <div class="row">
           <div class="col-lg-6 mx-auto">
-              <a class="btn btn-warning rounded-pill mt-lg-2" id="book" href="">Book a phone call</a>
+              <a class="btn btn-info mt-lg-2" id="book" href="">Book a phone call</a>
               <script type="text/javascript" src="https://x.ai/embed/xdotai-embed.js" id="xdotaiEmbed" data-page="/bastichelaar/phone" data-height data-width data-element="#book" async></script>
           </div>
         </div>
