--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -37,7 +37,7 @@
   background-size: cover;
 }
 
-.hero .btn {
+.btn {
     padding: .8rem 2rem;
     font-weight: 600;
 }
@@ -428,10 +428,6 @@ footer.main-footer {
   font-size: 0.9rem;
 }
 
-.copyrights {
-  margin-top: 2rem;
-  padding: 1.25rem 0;
-}
 
 /*
 
@@ -826,9 +822,6 @@ STYLE SWITCHER FOR DEMO
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='390' height='46.8' viewBox='0 0 1000 120'%3E%3Cg fill='none' stroke='%236c757d' stroke-width='5.3' stroke-opacity='0.09'%3E%3Cpath d='M-500 75c0 0 125-30 250-30S0 75 0 75s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 45c0 0 125-30 250-30S0 45 0 45s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 105c0 0 125-30 250-30S0 105 0 105s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 15c0 0 125-30 250-30S0 15 0 15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500-15c0 0 125-30 250-30S0-15 0-15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 135c0 0 125-30 250-30S0 135 0 135s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3C/g%3E%3C/svg%3E");
  }
 
- .bg-diagonal {
-  position:relative
- }
 
  .bg-diagonal:before {
   content:"";
