--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="main-footer bg-primary">
   <div class="container">
     <div class="row">
-      <div class="col-lg-3 mb-5 mb-lg-0">
+      <div class="col-lg-4 mb-5 mb-lg-0">
         <div class="footer-logo"><img src="/img/logo/skyworkz_white.svg" alt="..." class="img-fluid"></div>
       </div>
       <div class="col-lg-3 mb-5 mb-lg-0">
@@ -27,15 +27,12 @@
             {{ end }}
         </ul>
       </div>
-    </div>
-  <div class="container">
-    <div class="copyrights">
-      <div class="row mb-4">
-        <div class="col-lg-6">
-          <p class="copyrights-text mb-3 mb-lg-0">&copy; 2019 Skyworkz B.V.</a></p>
+      <div class="row mt-3 mb-2">
+        <div class="col-lg-7">
+          <p class="copyrights-text">&copy; 2020 Skyworkz B.V.</a></p>
         </div>
-        <div class="col-lg-6 text-center text-lg-right">
-          <ul class="list-inline social mb-0">
+        <div class="col-lg-5 pull-right">
+          <ul class="list-inline social pull-right">
             <li class="list-inline-item">
               <a href="https://linkedin.com/company/skyworkz" class="social-link"><i class="fa fa-linkedin"></i></a>
               <a href="https://twitter.com/skyworkznl" class="social-link"><i class="fa fa-twitter"></i></a>
@@ -43,8 +40,6 @@
               <a href="https://meetup.com/skyworkz" class="social-link"><i class="fa fa-meetup"></i></a>
               <a href="https://instagram.com/skyworkz.nl" class="social-link"><i class="fa fa-instagram"></i></a>
           </ul>
-        </div>
-      </div>
     </div>
   </div>
 </footer>
