--- a/layouts/partials/home-about.html
+++ b/layouts/partials/home-about.html
@@ -22,7 +22,7 @@
                 <p class="lead divider-subtitle mt-2 mb-3 text-muted">Next to <a href="/services/consultancy">cloud consulting</a> and our <a href="/services/kickstart">cloud kickstart</a>, we help companies <a href="/services/scan">save costs</a>, we organize various <a href="/workshops">workshops</a> and we provide <a href="/services/training">cloud training</a>.</p>
               </div>
             </div>
-            <a href="/team" class="btn btn-primary">Get to know us</a>
+            <a href="/team" class="btn btn-info">Get to know us</a>
           </div>
         </div>
  
