--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -37,9 +37,10 @@ $theme-colors: (
   "secondary":  $blue,
   "danger":     $red,
   "success":    $green,
-  "warning":      $yellow,
+  "warning":    $yellow,
   "info":       $cyan,
-  "dark":   $black
+  "dark":       $black,
+  "light":      white
 );
 
 // Custom Color
