--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,10 +1,10 @@
 <footer class="main-footer bg-primary">
   <div class="container">
     <div class="row">
-      <div class="col-lg-4 mb-5 mb-lg-0">
+      <div class="col-lg-4 mb-4 mb-lg-0">
         <div class="footer-logo"><img src="/img/logo/skyworkz_white.svg" alt="..." class="img-fluid"></div>
       </div>
-      <div class="col-lg-3 mb-5 mb-lg-0">
+      <div class="col-lg-3 mb-3 mb-lg-0">
         <h5 class="footer-heading">Pages</h5>
         <ul class="list-unstyled">
             {{ range .Site.Menus.footer }}
@@ -14,7 +14,7 @@
             {{ end }}
         </ul>
       </div>
-      <div class="col-lg-5  mb-5 mb-lg-0">
+      <div class="col-lg-5 mb-3 mb-lg-0">
         <h5 class="footer-heading">Latest blogposts</h5>
         <ul class="list-unstyled">
             {{ $posts := where .Site.Pages "Type" "blog" }}
@@ -27,11 +27,11 @@
             {{ end }}
         </ul>
       </div>
-      <div class="row mt-3 mb-2">
-        <div class="col-lg-7">
+      <div class="row mt-lg-3 mb-2">
+        <div class="col-6">
           <p class="copyrights-text">&copy; 2020 Skyworkz B.V.</a></p>
         </div>
-        <div class="col-lg-5 pull-right">
+        <div class="col-6 pull-right">
           <ul class="list-inline social pull-right">
             <li class="list-inline-item">
               <a href="https://linkedin.com/company/skyworkz" class="social-link"><i class="fa fa-linkedin"></i></a>
