Added missing js

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -19,7 +19,7 @@
   {{ $plugins := resources.Get "js/plugins.js" }}
   {{ $jquery := resources.Get "js/jquery.js" }}
   {{ $bootstrap := resources.Get "js/bootstrap.js" }}
-  {{ $defaultJS := slice $bootstrap | resources.Concat "js/global.js" | resources.Minify | resources.Fingerprint }}
+  {{ $defaultJS := slice $jquery $bootstrap | resources.Concat "js/global.js" | resources.Minify | resources.Fingerprint }}
   <script src="{{ $defaultJS.Permalink }}"></script>
 
   {{ $owlcarousel := resources.Get "js/owl.carousel.js" }}
