Made compatible with Bootstrap 5, more tweaks

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -9,7 +9,7 @@ $font-size-base: 1.4rem !default;
 $line-height-base: 2;
 
 $font-family-sans-serif:      -apple-system, BlinkMacSystemFont, "Open Sans", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
-$headings-font-family:        'Pathway Gothic One', sans-serif;
+$headings-font-family:        'Maven Pro', sans-serif;
 $headings-margin-bottom: 0;
 
 $headings-line-height: 1;
