--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -42,7 +42,7 @@
 			<div class="row justify-content-center">
 			<div class="col-10 align-self-center text-center">
 			<p class="center-text" style="padding: 30px;">
-				<a class="btn btn-main btn-warning rounded-pill" href="{{ $.Site.BaseURL }}/blog">Back to blog</a>
+				<a class="btn btn-main btn-warning" href="{{ $.Site.BaseURL }}/blog">Back to blog</a>
 			</p>
 			</div>
 		  </div>
