--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -17,7 +17,7 @@
                 </li>
                 {{ end }}
       </ul>
-      <a href="/contact" class="btn btn-primary text-white navbar-btn ms-lg-3 text-uppercase">Contact</a>
+      <a href="/contact" class="btn btn-primary text-white ms-lg-3 text-uppercase">Contact</a>
     </div>
   </div>
 </nav>
