--- a/layouts/partials/team.html
+++ b/layouts/partials/team.html
@@ -41,7 +41,7 @@
               {{ $id := urlize .name }}
               {{ if eq (printf "images/members/%s" .image ) $imageName }}
               <li class="mix">
-                <a href="{{ $image600.RelPermalink }}" data-toggle="modal" data-target="#{{ $id }}" class="portfolio-item">
+                <a href="{{ $image600.RelPermalink }}" data-bs-toggle="modal" data-bs-target="#{{ $id }}" class="portfolio-item">
                   <img src="{{ $image300.RelPermalink }}" class="img-fluid">
                   <div class="overlay">
                     <div>
@@ -58,16 +58,15 @@
                   <div class="modal-content">
                     <div class="modal-header">
                       <h5 class="modal-title" id="{{ $id }}Title">{{ .name }}</h5>
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
                       </button>
                     </div>
                     <div class="modal-body">
                       {{ .description | markdownify }}
+                      <img src="{{ $image300.RelPermalink }}" class="img-fluid">
                     </div>
                     <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    </div>
+                      </div>
                   </div>
                 </div>
               </div>
