--- a/layouts/shortcodes/col-left-10.html
+++ b/layouts/shortcodes/col-left-10.html
@@ -1,5 +1,5 @@
 <div class="col-lg-10 pr-lg-5">
-  <h2 class="display-5">{{ .Get "title" }}</h2>
+  <h3>{{ .Get "title" }}</h2>
     <div class="lead divider-subtitle mt-2 text-muted">
       {{ .Inner }}
     </div>
