--- a/layouts/partials/home-services.html
+++ b/layouts/partials/home-services.html
@@ -1,7 +1,7 @@
 <section class="py-lg-5">
     <div class="container">
         <div class="text-center">
-          <h2 class="display-4">Services</h2>
+          <h2 class="display-4 text-black">Services</h2>
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <p class="lead text-muted mt-2 text-light">We like to solve hard problems. Can you challenge us?</p>
