--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,10 +1,10 @@
 <footer class="main-footer bg-primary">
   <div class="container">
     <div class="row">
-      <div class="col-lg-4 mb-4 mb-lg-0">
+      <div class="col-md-4 mb-4 mb-lg-0 text-center text-md-start">
         <div class="footer-logo"><img src="/img/logo/skyworkz_white.svg" alt="..." class="img-fluid"></div>
       </div>
-      <div class="col-lg-3 mb-3 mb-lg-0">
+      <div class="col-md-3 mb-3 mb-lg-0 d-none d-md-block">
         <h5 class="footer-heading">Pages</h5>
         <ul class="list-unstyled">
             {{ range .Site.Menus.footer }}
@@ -14,7 +14,7 @@
             {{ end }}
         </ul>
       </div>
-      <div class="col-lg-5 mb-3 mb-lg-0">
+      <div class="col-md-5 mb-3 mb-lg-0 d-none d-md-block">
         <h5 class="footer-heading">Latest blogposts</h5>
         <ul class="list-unstyled">
             {{ $posts := where .Site.Pages "Type" "blog" }}
