--- a/layouts/partials/home-services.html
+++ b/layouts/partials/home-services.html
@@ -3,7 +3,7 @@
         <div class="text-center">
           <h2 class="display-4 text-black">Services</h2>
           <div class="row">
-            <div class="col-lg-8 mx-auto">
+            <div class="col-md-8 mx-auto">
               <p class="lead text-muted mt-2 text-light">We like to solve hard problems. Can you challenge us?</p>
             </div>
           </div>
