--- a/layouts/partials/home-services.html
+++ b/layouts/partials/home-services.html
@@ -1,9 +1,9 @@
 <section class="py-lg-5">
     <div class="container">
         <div class="text-center">
-          <h2 class="display-4">Services</h2>
+          <h2 class="display-4 text-black">Services</h2>
           <div class="row">
-            <div class="col-lg-8 mx-auto">
+            <div class="col-md-8 mx-auto">
               <p class="lead text-muted mt-2 text-light">We like to solve hard problems. Can you challenge us?</p>
             </div>
           </div>
@@ -39,7 +39,7 @@
             </div>
           </div>
           <div class="text-center">
-            <a class="btn btn-primary rounded-pill" href="/services">Read more about our services</a>
+            <a class="btn btn-info" href="/services">Read more about our services</a>
           </div>
         </div>
       </div>
