--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -24,17 +24,21 @@
 }
 
 .hero {
-  background-color: #4682b4;
+  background-color: #264e63;
   background: 
   linear-gradient(
-    175deg,
-    rgba(47,72,88, 1) 8rem,
-    rgba(246,174,45, 0) 40%,
-    rgba(70,130,180, 0.7) 80%
+    180deg,
+    rgba(0, 0, 0, 0.8) 2rem,
+    rgba(0,0,0, 0) 60%,
+    rgba(0, 0, 0, 0.6) 90%
   ),
-  url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg stroke='%23ffffff' stroke-width='66.7' stroke-opacity='0.03' %3E%3Ccircle fill='%234682b4' cx='0' cy='0' r='1800'/%3E%3Ccircle fill='%23457faf' cx='0' cy='0' r='1700'/%3E%3Ccircle fill='%23437ba9' cx='0' cy='0' r='1600'/%3E%3Ccircle fill='%234278a4' cx='0' cy='0' r='1500'/%3E%3Ccircle fill='%2341749e' cx='0' cy='0' r='1400'/%3E%3Ccircle fill='%233f7199' cx='0' cy='0' r='1300'/%3E%3Ccircle fill='%233e6e94' cx='0' cy='0' r='1200'/%3E%3Ccircle fill='%233d6a8e' cx='0' cy='0' r='1100'/%3E%3Ccircle fill='%233b6789' cx='0' cy='0' r='1000'/%3E%3Ccircle fill='%233a6383' cx='0' cy='0' r='900'/%3E%3Ccircle fill='%2338607e' cx='0' cy='0' r='800'/%3E%3Ccircle fill='%23375c78' cx='0' cy='0' r='700'/%3E%3Ccircle fill='%23365973' cx='0' cy='0' r='600'/%3E%3Ccircle fill='%2334566e' cx='0' cy='0' r='500'/%3E%3Ccircle fill='%23335268' cx='0' cy='0' r='400'/%3E%3Ccircle fill='%23324f63' cx='0' cy='0' r='300'/%3E%3Ccircle fill='%23304b5d' cx='0' cy='0' r='200'/%3E%3Ccircle fill='%232f4858' cx='0' cy='0' r='100'/%3E%3C/g%3E%3C/svg%3E");
+  url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='100' height='50' viewBox='0 0 100 50'%3E%3Cdefs%3E%3Crect stroke='%23264e63' stroke-width='0.3' width='1' height='1' id='s'/%3E%3Cpattern id='a' width='2' height='2' patternUnits='userSpaceOnUse'%3E%3Cg stroke='%23264e63' stroke-width='0.3'%3E%3Crect fill='%232a5266' width='1' height='1'/%3E%3Crect fill='%23264e63' width='1' height='1' x='1' y='1'/%3E%3Crect fill='%232f5569' width='1' height='1' y='1'/%3E%3Crect fill='%2333596c' width='1' height='1' x='1'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='b' width='5' height='11' patternUnits='userSpaceOnUse'%3E%3Cg fill='%23375c6f'%3E%3Cuse xlink:href='%23s' x='2' y='0'/%3E%3Cuse xlink:href='%23s' x='4' y='1'/%3E%3Cuse xlink:href='%23s' x='1' y='2'/%3E%3Cuse xlink:href='%23s' x='2' y='4'/%3E%3Cuse xlink:href='%23s' x='4' y='6'/%3E%3Cuse xlink:href='%23s' x='0' y='8'/%3E%3Cuse xlink:href='%23s' x='3' y='9'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='c' width='7' height='7' patternUnits='userSpaceOnUse'%3E%3Cg fill='%233c6073'%3E%3Cuse xlink:href='%23s' x='1' y='1'/%3E%3Cuse xlink:href='%23s' x='3' y='4'/%3E%3Cuse xlink:href='%23s' x='5' y='6'/%3E%3Cuse xlink:href='%23s' x='0' y='3'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='d' width='11' height='5' patternUnits='userSpaceOnUse'%3E%3Cg fill='%23264e63'%3E%3Cuse xlink:href='%23s' x='1' y='1'/%3E%3Cuse xlink:href='%23s' x='6' y='3'/%3E%3Cuse xlink:href='%23s' x='8' y='2'/%3E%3Cuse xlink:href='%23s' x='3' y='0'/%3E%3Cuse xlink:href='%23s' x='0' y='3'/%3E%3C/g%3E%3Cg fill='%23406376'%3E%3Cuse xlink:href='%23s' x='8' y='3'/%3E%3Cuse xlink:href='%23s' x='4' y='2'/%3E%3Cuse xlink:href='%23s' x='5' y='4'/%3E%3Cuse xlink:href='%23s' x='10' y='0'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='e' width='47' height='23' patternUnits='userSpaceOnUse'%3E%3Cg fill='%23008987'%3E%3Cuse xlink:href='%23s' x='2' y='5'/%3E%3Cuse xlink:href='%23s' x='23' y='13'/%3E%3Cuse xlink:href='%23s' x='4' y='18'/%3E%3Cuse xlink:href='%23s' x='35' y='9'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='f' width='61' height='31' patternUnits='userSpaceOnUse'%3E%3Cg fill='%23008987'%3E%3Cuse xlink:href='%23s' x='16' y='0'/%3E%3Cuse xlink:href='%23s' x='13' y='22'/%3E%3Cuse xlink:href='%23s' x='44' y='15'/%3E%3Cuse xlink:href='%23s' x='12' y='11'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23a)' width='100' height='50'/%3E%3Crect fill='url(%23b)' width='100' height='50'/%3E%3Crect fill='url(%23c)' width='100' height='50'/%3E%3Crect fill='url(%23d)' width='100' height='50'/%3E%3Crect fill='url(%23e)' width='100' height='50'/%3E%3Crect fill='url(%23f)' width='100' height='50'/%3E%3C/svg%3E");
+  background-attachment: fixed;
   background-size: cover;
-  
+}
+
+.btn {
+    font-family: "Maven Pro", sans-serif;
 }
 
 .gradient-light {
@@ -184,16 +188,15 @@ a {
   transition: all 0.3s;
   display: inline-block;
   font-weight: 600;
+  color: $teal;
 }
 
 a:hover {
   text-decoration: none;
+  color: $teal-700;
 }
 
 
-.btn {
-  padding: 5px 18px;
-}
 
 .btn-shadow {
   box-shadow: 5px 5px 40px rgba(0,0,0,0.3);
@@ -294,7 +297,6 @@ button {
   font-size: 3rem;
   font-weight: 500;
   line-height: 1;
-  color: $color-blue-dark-v4;
 }
 
 /* GENERAL MEDIAQUERY */
@@ -313,15 +315,6 @@ nav.navbar {
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
 }
-
-@media (max-width: 767px) {
-  nav.navbar {
-    background-color: #2F4858;
-  }
-}
-
-
-
 
 nav.navbar.active {
   background: #fff;
@@ -390,7 +383,7 @@ footer.main-footer {
   color: #fff;
 }
 
-.footer-logo {
+.footer-logo img {
   width: 7.5rem;
 }
 
@@ -425,10 +418,6 @@ footer.main-footer {
   font-size: 0.9rem;
 }
 
-.copyrights {
-  margin-top: 2rem;
-  padding: 1.25rem 0;
-}
 
 /*
 
@@ -476,10 +465,11 @@ STYLE SWITCHER FOR DEMO
 
 
 .hero-heading {
+  font-family: "Poppins", sans-serif;
   font-size: 4rem;
   line-height: 1;
-  color: $yellow;
-  text-shadow: 10px 10px 40px rgba(0,0,0,0.5);
+  color: $teal;
+  text-shadow: 10px 10px 40px rgba(0,0,0,0.7);
 }
 
 @media (max-width: 991.98px) {
@@ -791,20 +781,60 @@ STYLE SWITCHER FOR DEMO
   width: 12rem;
 }
 
+.navbar-brand img {
+  height: 40px;
+}
+
+.navbar-collapse.collapsing,
+.navbar-collapse.show {
+  background-color: $black !important;
+}
+
+.navbar-toggler.collapsed,
+.navbar-toggler,
+.navbar-toggler:focus {  
+  border: 0px solid transparent;
+  box-shadow: none;
+}
+
+span.navbar-toggler-icon {
+  color: $teal;
+}
+
+.navbar-toggler.collapsed,
 .navbar-toggler {
   padding: 0.25rem 0.75rem;
   font-size: 0.85rem;
   font-weight: 600;
   line-height: 1;
   text-transform: uppercase;
-  border: 1px solid transparent;
-  border-radius: 3rem;
 }
 
-// .navbar-toggler:hover, .navbar-toggler:focus {
-//   outline: none;
-// }
+@media (max-width: 992px) {
+  .navbar-collapse {
+      position: fixed;
+      top: 0px; /* adjust to height of navbar */
+      left: 100%;
+      padding: 30px;
+      width: 75%;
+      height: 100%;
+  }
 
+  .navbar-collapse.collapsing {
+      left: -75%;
+      transition: height 0s ease;
+      background-color: $black;
+  }
+
+  .navbar-collapse.show {
+      left: 0;
+      transition: left 300ms ease-in-out;
+  }
+
+  .navbar-toggler.collapsed ~ .navbar-collapse {
+      transition: left 500ms ease-in-out;
+  }
+}
 
 
 /*
@@ -819,9 +849,6 @@ STYLE SWITCHER FOR DEMO
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='390' height='46.8' viewBox='0 0 1000 120'%3E%3Cg fill='none' stroke='%236c757d' stroke-width='5.3' stroke-opacity='0.09'%3E%3Cpath d='M-500 75c0 0 125-30 250-30S0 75 0 75s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 45c0 0 125-30 250-30S0 45 0 45s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 105c0 0 125-30 250-30S0 105 0 105s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 15c0 0 125-30 250-30S0 15 0 15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500-15c0 0 125-30 250-30S0-15 0-15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 135c0 0 125-30 250-30S0 135 0 135s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3C/g%3E%3C/svg%3E");
  }
 
- .bg-diagonal {
-  position:relative
- }
 
  .bg-diagonal:before {
   content:"";
@@ -862,8 +889,6 @@ h6,
 .h5,
 .h6 {
   margin-bottom: 0.5rem;
-  font-family: inherit;
-  font-weight: 300;
   line-height: 1.2;
   color: inherit;
 }
@@ -960,9 +985,8 @@ a.text-primary:hover, a.text-primary:focus {
 }
 
 .page-item.active .page-link {
-  color: #fff;
-  background-color: $yellow;
-  border-color: $blue;
+  color: $white;
+  background-color: $teal
 }
 
 .page-item.disabled .page-link {
@@ -974,13 +998,12 @@ a.text-primary:hover, a.text-primary:focus {
 .page-link {
   padding: 0.5rem 0.75rem;
   line-height: 1.25;
-  color: $blue;
   background-color: #fff;
   border: 0px solid #dee2e6;
+  color: $teal;
 }
 
 .page-link:hover, .page-link:focus {
-  color: #00448d;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
@@ -1020,11 +1043,8 @@ a.text-primary:hover, a.text-primary:focus {
 
 .nav-link {
   font-weight: 600;
+  font-family: "Maven Pro", sans-serif;
   padding: 0.5rem 1rem;
-}
-
-.nav-link:hover {
-  color: $color-gray-light-v1;
 }
 
 .dark-overlay {
@@ -1140,7 +1160,7 @@ a.text-primary:hover, a.text-primary:focus {
   display: inline-block;
   width: 31.5%;
   overflow: hidden;
-  margin: 0.5em 0.5em;
+  margin: 0.5% 0.5%;
   position: relative;
   -webkit-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
