--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -30,7 +30,7 @@
 	      <div class="row justify-content-center">
             {{ if isset .Params "images" }}
 	          <div class="col-md-10">
-              {{ with (index (.Params.images) 0) }}<div class="float-right m-2 w-50" ><img src="{{ . | absURL }}" class="img-fluid" alt="post-image" title="{{ $.Page.Title }}"></div>{{ end }}
+              {{ with (index (.Params.images) 0) }}<div class="float-end m-2 w-25" ><img src="{{ . | absURL }}" class="img-fluid" alt="post-image" title="{{ $.Page.Title }}"></div>{{ end }}
 	            <p>{{ .Content }}</p>
               </div>
             {{ else }}
