Replaced x.ai with Calendarhero

--- a/layouts/partials/careers.html
+++ b/layouts/partials/careers.html
@@ -53,9 +53,8 @@
               <p>{{ .text | markdownify }}</p>
             </div>
             <div class="modal-footer">
-              <a class="btn btn-success" id="book" href="">Apply now</a>
+              <a class="btn btn-success" id="book" href="https://calendarhero.to/jobinterviewbas" target="_new">Apply now</a>
               <a class="btn btn-outline-danger" data-bs-dismiss="modal" aria-label="Close">Close</a>
-              <script type="text/javascript" src="https://x.ai/embed/xdotai-embed.js" id="xdotaiEmbed" data-page="/bastichelaar/interview" data-height data-width data-element="#book" async></script>
             </div>
           </div>
         </div>
@@ -71,8 +70,7 @@
       <div class="col-sm-10 text-center">
         <h2>Did we trigger you?</h2>
         <p>Great! Writing texts is hard, especially for job offers. But now you're here, let's take the next step. Let's have a coffee (or a beer if you like).</p>
-        <a class="btn btn-outline-primary mt-lg-2" id="book" href="">Apply now</a>
-        <script type="text/javascript" src="https://x.ai/embed/xdotai-embed.js" id="xdotaiEmbed" data-page="/bastichelaar/interview" data-height data-width data-element="#book" async></script>
+        <a class="btn btn-outline-primary mt-lg-2" id="book" href="https://calendarhero.to/jobinterviewbas" target="_new">Apply now</a>
       </div>
     </div>
   </div>
