--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -44,7 +44,7 @@
       <div class="col-12">
           <div class="block">
             <h2>Book a meeting</h2>
-            <iframe src="https://x.ai/calendar/bastichelaar/phone" style="width:100%;height:100vh;border:none;;" scrolling="auto" > </iframe>
+            <div class="calendarhero-inline-widget" data-url="https://meeting.calendarhero.com/meeting/new/6140a9c858a75c0020d98e26/meeting" style="min-width:320px; height:630px;"></div>
           </div>
         </div>
         </div>
