--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,4 @@
+<div class="calendarhero-slideout-widget-url" data-url="https://meeting.calendarhero.com/meeting/new/6140a9c858a75c0020d98e26/meeting"></div>
 <footer class="main-footer bg-primary">
   <div class="container">
     <div class="row">
