--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -13,6 +13,7 @@ window.cookieconsent.initialise({
     "theme": "edgeless"
 });
 </script>
+<script type="text/javascript" src="https://app.calendarhero.com/assets/widget.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154801189-1"></script> 
 
